--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-numpy==1.23.0
-onnx==1.12.0
-onnx_simplifier==0.3.10
-onnxruntime==1.11.1
-onnxsim==0.4.0
-opencv_python==4.2.0.34
-pycocotools==2.0.4
-PyYAML==6.0
-torch==1.11.0+cu113
-torchsummary==1.5.1
-torchvision==0.12.0+cu113
-tqdm==4.59.0
+numpy
+opencv_python
+torch==1.13.1+cu117 --extra-index-url https://download.pytorch.org/whl/cu117
+torchvision==0.14.1+cu117 --extra-index-url https://download.pytorch.org/whl/cu117
+torchaudio==0.13.1 --extra-index-url https://download.pytorch.org/whl/cu117
+torchsummary
+onnx
+onnxsim
+pycocotools
+tqdm
